# import-stat-mddocs-plugin

./: README.md  pyproject.toml
mkdocs_import_stat_plugin/: __init__.py  clear_stat.py  import_stat.py
